# monero-starknet-atomic-swap

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  ANALYSIS.md  AUDIT.md  AUDITED_LIBRARIES_APPLIED.md  AUDITOR_ASSESSMENT.md  AUDITOR_ASSESSMENT_NEGATIVE_TESTS.md  AUDITOR_FIX_SUMMARY.md  AUDITOR_QUESTION.md  AUDITOR_RECOMMENDATIONS.md  AUDITOR_RECOMMENDATIONS_STATUS.md  AUDITOR_RESPONSE.md  AUDITOR_STATUS_REPORT.md  AUDITOR_UPDATE.md  AUDITOR_UPDATE_PROTOCOL_ISSUE.md  AUDIT_CHECKLIST.md  AUDIT_PREPARATION_COMPLETE.md  AUDIT_RESPONSE.md  BLAKE2S_IMPLEMENTATION_NOTES.md  BLAKE2S_MIGRATION_STATUS.md  BYTE_ORDER_VERIFICATION.md  CAIRO_MODULE_STRUCTURE.md  CHANGELOG.md  CI_STATUS.md  CLAUDE.md  COMPRESSED_POINT_FIX_STATUS.md  CONTEXT_GENERATION.md  CONTRIBUTING.md  CRITICAL_AUDIT_ISSUES.md  CRYPTOGRAPHY_VERIFICATION.md  DEBUG_STATUS.md  DECOMPRESSION_DEBUG_ANALYSIS.md  DLEQ_COMPATIBILITY.md  DOCKER_FINAL_STATUS.md  DOCKER_FIX_SUMMARY.md  DOCKER_SETUP_NOTES.md  DOCKER_SETUP_SUCCESS.md  Dockerfile.wallet-rpc  (+62 more)
.cursor/: mcp.json
.cursor/rules/: cairo-starknet.mdc  python-tools.mdc  rust-crypto.mdc
.github/workflows/: audit-verification.yml  cairo.yml  docker-publish.yml  format-check.yml  pr-checklist.md  rust.yml  validate-vectors.yml
cairo/: INVARIANTS.md  README_TESTS.md  Scarb.toml  adaptor_point_hint.json  coverage.toml  dleq_hints_from_decompressed.json  snfoundry.toml  test_hints.json
cairo/.snfoundry_cache/: .prev_tests_failed
cairo/src/: blake2s_challenge.cairo  edwards_serialization.cairo  lib.cairo
cairo/tests/: dleq_test_helpers.cairo  test_atomic_lock.cairo  test_blake2s_byte_order.cairo  test_blake2s_challenge.cairo  test_blake2s_state_debug.cairo  test_constructor_flow.cairo  test_constructor_flow.cairo.disabled  test_constructor_step_by_step.cairo  test_debug_blake2s_state.cairo  test_debug_challenge.cairo  test_debug_scalar.cairo  test_decompression_formats.cairo  test_dleq.cairo  test_dleq_challenge_only.cairo  test_dleq_edge_cases.cairo  test_dleq_hint_verification.cairo  test_dleq_multiple_vectors.cairo  test_dleq_negative.cairo  test_e2e_dleq.cairo  test_e2e_full_swap_flow.cairo  test_ed25519_base_point.cairo  test_extract_adaptor_coords.cairo  test_extract_coordinates.cairo  test_full_swap_flow.cairo  test_garaga_integration.cairo  test_garaga_minimal.cairo  test_garaga_msm_all_calls.cairo  test_garaga_msm_debug.cairo  test_gas_benchmark.cairo  test_hashlock_serde.cairo  test_integration_adaptor_hint.cairo  test_integration_atomic_lock.cairo  test_integration_constructor.cairo  test_integration_dleq_hint.cairo  test_integration_dleq_multiple.cairo  test_integration_extract_coords.cairo  test_integration_garaga_msm.cairo  test_integration_gas.cairo  test_integration_hint_serde.cairo  test_msm_sg_minimal.cairo  (+20 more)
cairo/tests/fixtures/: AUTHORITATIVE_SQRT_HINTS.cairo  CANONICAL_VECTORS.md  deployment_helpers.cairo  test_vectors.cairo
docs/: ARCHITECTURE.md  AUDITOR_GUIDE.md  AUDITOR_RECOMMENDATIONS_IMPLEMENTED.md  AUDITOR_TEST_FAILURES.md  AUDITOR_TEST_FIXES_SUMMARY.md  AUDITOR_TEST_PLAN_RESPONSE.md  AUDIT_DEPENDENCIES.md  CONSOLIDATION_AUDITOR_UPDATE.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_PROGRESS.md  CONSOLIDATION_STATUS.md  CONTEXT_GENERATION.md  DOCKER_PUBLISHING.md  DOCKER_SETUP.md  P0_FIXES_STRATEGY.md  PROTOCOL.md  REFACTOR_SUMMARY.md  SETUP.md  SQRT_HINT_PREVENTION.md  TEST_FIXES_APPLIED.md  TEST_PLAN_ASSESSMENT.md  TEST_STATUS.md  WALLET_RPC_SETUP.md
docs/announcements/: TWEET_CONTEXT.md
docs/decisions/: 001-key-splitting.md  002-blake2s-over-poseidon.md  003-garaga-msm.md
rust/: Cargo.toml  IMPLEMENTATION_STATUS.md  canonical_test_vectors.json  deployment_vector.json  test_vectors.json
rust/docs/: MONERO_WALLET_INTEGRATION.md
rust/docs/archived/: CLSAG_MATH.md
rust/src/: dleq.rs  lib.rs  main.rs  monero.rs  monero_full.rs  poseidon.rs  starknet.rs  starknet_full.rs
rust/src/adaptor/: adaptor_sig.rs  key_splitting.rs  mod.rs
rust/src/clsag/: adaptor.rs  adaptor_audited.rs  mod.rs
rust/src/monero/: key_splitting.rs  mod.rs  transaction.rs
rust/src/monero_wallet/: client.rs  error.rs  mod.rs  types.rs
rust/tests/: README_CLSAG_TESTS.md  atomic_swap_e2e.rs  clsag_adaptor.rs  clsag_dleq_integration.rs  clsag_mirror_smoke.rs  clsag_verify_audited.rs  dleq_properties.rs  integration_test.rs  key_splitting_dleq_integration.rs  monero_integration_test.rs  rust_cairo_compatibility.rs  test_vectors.rs  wallet_integration_test.rs
rust/tests/archived/: clsag_hash_to_point.rs  clsag_integration.rs  clsag_standard.rs  clsag_unit_tests.rs
rust/tests/helpers/: mod.rs  monero.rs  monero_wallet.rs
scripts/: check_account_class.ts  deploy.sh  deploy.ts  deploy_account_with_sncast.sh  deploy_with_sncast.sh  deploy_with_starknet_py.py  publish_dockerhub.sh  setup_deployer_account.sh  test.sh  validate_p0_fixes.sh
scripts/ts/: .deployer-key.json  package-lock.json  package.json  tsconfig.json
scripts/ts/src/: account.ts  declare.ts  (+2 more)
tests/: cross_impl_test.sh
tools/: README.md  debug_hints.py  discover_sqrt_hints.py  ed25519_test_data.json  fix_all_hints.py  fix_compressed_points.py  garaga_conversion.py  generate_adaptor_hint.py  generate_adaptor_point_hint.py  generate_correct_sqrt_hints.py  generate_deploy_calldata.py  generate_dleq_for_adaptor_point.py  generate_dleq_hints.py  generate_ed25519_test_data.py  generate_hints_exact.py  generate_hints_from_decompressed_points.py  generate_hints_from_test_vectors.py  generate_second_base.py  generate_sqrt_hints.py  generate_test_hints.py  hex_to_cairo_u256.py  pyproject.toml  regenerate_dleq_hints.py  regenerate_garaga_hints.py  validate_sqrt_hints.py  verify_challenge_computation.py  verify_exact_scalar_match.py  verify_fake_glv_decomposition.py  verify_full_compatibility.py  verify_hint.py  verify_hint_scalars.py  verify_rust_cairo_equivalence.py
watchtower/: Cargo.toml  README.md
watchtower/src/: lib.rs  main.rs  types.rs
watchtower/src/alerts/: mod.rs  notifier.rs
watchtower/src/monero/: watcher.rs
watchtower/src/starknet/: client.rs  listener.rs
(+5 files in other folders)
