[package]
name = "xmr_secret_gen"
version = "0.1.0"
edition = "2021"
description = "Monero scalar generator for atomic swaps"

[dependencies]
# ===== AUDITED CRYPTOGRAPHY =====
# Quarkslab-audited elliptic curve operations (2023)
curve25519-dalek = { version = "4.1", features = ["serde", "zeroize", "rand_core"] }

# Monero CLSAG - Cypher Stack audit in progress (CCS-funded)
# Using git source directly from serai-dex/serai (official source being audited)
# The -mirror crates are unofficial; use the source of truth for audit traceability
# NOTE: Package names are reserved but not yet published - using mirror temporarily
# TODO: Switch to git when packages are available: monero-clsag = { git = "https://github.com/serai-dex/serai", package = "monero-clsag" }
monero-clsag-mirror = "0.1"  # TEMPORARY: Unofficial mirror (same code as serai-dex/serai)
# The mirror contains the same code being audited, just published by community member sneurlax

# RustCrypto suite (NCC Group audited)
blake2 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
zeroize = { version = "1.8", features = ["derive"] }

# ===== OTHER DEPENDENCIES =====
rand = "0.8"
rand_core = "0.6"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
num-bigint = "0.4"
num-traits = "0.2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
thiserror = "1"
url = "2"

[features]
default = []
full-integration = []

[[bin]]
name = "maker"
path = "src/bin/maker.rs"

[[bin]]
name = "taker"
path = "src/bin/taker.rs"

[[bin]]
name = "get_constants"
path = "src/bin/get_constants.rs"

[dev-dependencies]
assert_cmd = "2.0"
proptest = "1"  # Property-based testing for cryptographic code
